--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             <div class="col">
               <div class="card shadow-sm">
-                <img src="/Burger/BBQ Burger.jpg" class="bd-placeholder-img card-img-top" width="100%" height="225" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false" alt="Image Description">
+                <img src="{{ url_for('static',filename='BBQ Burger.jpg') }}" class="bd-placeholder-img card-img-top" width="100%" height="225" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false" alt="Image Description">
                 <div class="card-body">
                   <p class="card-text">The BBQ burger is a mouthwatering delight featuring a juicy beef patty grilled to perfection, topped with smoky barbecue sauce, melted cheese, crispy bacon, and caramelized onions. It's a tantalizing combination of flavors that will satisfy your cravings for a savory and indulgent burger experience. &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp </p>
                   <div class="d-flex justify-content-between align-items-center">
@@ -61,7 +61,7 @@
         <div class="col">
             <div class="col">
                 <div class="card shadow-sm">
-                  <img src="Burger/Zestaw Cheese Burger.jpg" class="bd-placeholder-img card-img-top" width="100%" height="225" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false" alt="Image Description">
+                  <img src="{{ url_for('static',filename='Cheese Burger.jpg') }}"class="bd-placeholder-img card-img-top" width="100%" height="225" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false" alt="Image Description">
                   <div class="card-body">
                     <p class="card-text">
                         A cheeseburger is a classic American delicacy consisting of a juicy beef patty topped with melted cheese, sandwiched between soft buns, offering a perfect blend of savory flavors and indulgent satisfaction. It is a mouthwatering culinary creation that has become an enduring symbol of comfort food worldwide. &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp </p>
@@ -79,7 +79,7 @@
         <div class="col">
             <div class="col">
                 <div class="card shadow-sm">
-                  <img src="Burger/Zestaw Beef Burger.jpg" class="bd-placeholder-img card-img-top" width="100%" height="225" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false" alt="Image Description">
+                  <img src="{{ url_for('static',filename='Beef Burger.jpg') }}" class="bd-placeholder-img card-img-top" width="100%" height="225" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false" alt="Image Description">
                   <div class="card-body">
                     <p class="card-text">
                         A beef burger is a flavorful culinary masterpiece crafted from a succulent beef patty, perfectly seasoned and cooked to perfection, creating a delectable combination of rich, savory taste and satisfying texture. With each juicy bite, the beef burger delivers a hearty and satisfying experience that has made it a beloved choice for burger enthusiasts everywhere.
