--- a/templates/index.html
+++ b/templates/index.html
@@ -47,8 +47,9 @@
             <p class="card-text">The BBQ burger is a mouthwatering delight featuring a juicy beef patty grilled to perfection, topped with smoky barbecue sauce, melted cheese, crispy bacon, and caramelized onions. It's a tantalizing combination of flavors that will satisfy your cravings for a savory and indulgent burger experience. &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp </p>
             <div class="d-flex justify-content-between align-items-center">
               <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#BBQ_Burger">
+                  Danie Dnia
+                </button>
               </div>
               <small class="text-body-secondary">9 mins</small>
             </div>
@@ -64,8 +65,9 @@
                   A cheeseburger is a classic American delicacy consisting of a juicy beef patty topped with melted cheese, sandwiched between soft buns, offering a perfect blend of savory flavors and indulgent satisfaction. It is a mouthwatering culinary creation that has become an enduring symbol of comfort food worldwide. &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp </p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  
+                  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#DanieDnia">
+                    Danie Dnia
+                  </button>
                 </div>
                 <small class="text-body-secondary">9 mins</small>
               </div>
@@ -83,8 +85,9 @@
               </p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  
+                  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#Beef_Zestaw">
+                    Danie Dnia
+                  </button>
                 </div>
                 <small class="text-body-secondary">9 mins</small>
               </div>
@@ -141,8 +144,9 @@
                   A chicken burger is a flavorful alternative to its beef counterpart, featuring a tender and juicy chicken patty seasoned to perfection. Served between soft buns with an array of toppings, it offers a lighter yet satisfying option that caters to both poultry lovers and those seeking a delicious twist on the classic burger experience.&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  </p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  
+                  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#Chiken">
+                    Danie Dnia
+                  </button>
                 </div>
                 <small class="text-body-secondary">9 mins</small>
               </div>
@@ -160,8 +164,9 @@
               A cheeseburger is a timeless classic that combines a succulent beef patty with melty cheese, resulting in a harmonious blend of savory flavors. Nestled between two soft buns and topped with various condiments, it's a mouthwatering delight that satisfies cravings and embodies the epitome of comfort food.</p>
             <div class="d-flex justify-content-between align-items-center">
               <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#DanieDnia">
+                  Danie Dnia
+                </button>
               </div>
               <small class="text-body-secondary">9 mins</small>
             </div>
@@ -178,8 +183,9 @@
                   A beef burger is a juicy and flavorful delight, made from a perfectly seasoned beef patty cooked to perfection. Sandwiched between soft buns and customizable with an array of toppings, it offers a satisfying and hearty dining experience that celebrates the rich taste of high-quality beef.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  
+                  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#Beef">
+                    Danie Dnia
+                  </button>
                 </div>
                 <small class="text-body-secondary">9 mins</small>
               </div>
@@ -196,8 +202,9 @@
                   The beef bacon burger is an irresistible fusion of savory flavors, combining a juicy beef patty with crispy bacon made from flavorful beef. With each bite, you'll savor the perfect balance of meaty goodness and smoky undertones, creating a mouthwatering burger experience that is sure to delight any bacon lover.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  
+                  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#Beef_Bacon_Burger">
+                    Danie Dnia
+                  </button>
                 </div>
                 <small class="text-body-secondary">9 mins</small>
               </div>
