--- a/templates/index.html
+++ b/templates/index.html
@@ -39,17 +39,18 @@
 <div class="album py-5 bg-body-tertiary">
 <div class="container">
 
-  <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+  <div class="row row-cols-3 row-cols-sm-2 row-cols-md-3 g-3">
       <div class="col">
         <div class="card shadow-sm">
           <img src="Burger/BBQ Burger.jpg" class="bd-placeholder-img card-img-top" width="100%" height="225" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false" alt="Image Description">
           <div class="card-body">
-            <p class="card-text">The BBQ burger is a mouthwatering delight featuring a juicy beef patty grilled to perfection, topped with smoky barbecue sauce, melted cheese, crispy bacon, and caramelized onions. It's a tantalizing combination of flavors that will satisfy your cravings for a savory and indulgent burger experience. &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp </p>
+            <p class="card-text">
+              The BBQ burger is a mouthwatering delight featuring a juicy beef patty grilled to perfection, topped with smoky barbecue sauce, melted cheese, crispy bacon, and caramelized onions. It's a tantalizing combination of flavors that will satisfy your cravings for a savory and indulgent burger experience. &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp </p>
             <div class="d-flex justify-content-between align-items-center">
-              <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+              
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#BBQ_Burger">
+                  Danie Dnia
                 
-              </div>
               <small class="text-body-secondary">9 mins</small>
             </div>
           </div>
@@ -63,10 +64,11 @@
               <p class="card-text">
                   A cheeseburger is a classic American delicacy consisting of a juicy beef patty topped with melted cheese, sandwiched between soft buns, offering a perfect blend of savory flavors and indulgent satisfaction. It is a mouthwatering culinary creation that has become an enduring symbol of comfort food worldwide. &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp </p>
               <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  
-                </div>
+                
+                  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#DanieDnia">
+                    Danie Dnia
+                  </button>
+                
                 <small class="text-body-secondary">9 mins</small>
               </div>
             </div>
@@ -82,10 +84,11 @@
                   A beef burger is a flavorful culinary masterpiece crafted from a succulent beef patty, perfectly seasoned and cooked to perfection, creating a delectable combination of rich, savory taste and satisfying texture. With each juicy bite, the beef burger delivers a hearty and satisfying experience that has made it a beloved choice for burger enthusiasts everywhere.
               </p>
               <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  
-                </div>
+                
+                  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#Beef_Zestaw">
+                    Danie Dnia
+                  </button>
+                
                 <small class="text-body-secondary">9 mins</small>
               </div>
             </div>
@@ -102,11 +105,11 @@
                   Indulge in the mouthwatering delight of a BBQ burger, featuring a flame-grilled beef patty generously slathered with tangy barbecue sauce, topped with melted cheese and crispy bacon, all nestled between soft buns. Accompanied by a side of golden fries and a refreshing Coca-Cola, this combination of smoky, savory flavors and classic comfort pairings promises a truly satisfying and quintessentially American dining experience.
               </p>
               <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
+                
                   <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#BBQ_Zestaw">
                     Danie Dnia
                   </button>
-                </div>
+                
                 <small class="text-body-secondary">9 mins</small>
               </div>
             </div>
@@ -122,7 +125,7 @@
                   Transport your taste buds to a tropical paradise with a Hawaiian burger. This delicious creation combines a juicy beef or chicken patty with a slice of sweet grilled pineapple, crispy bacon, and a tangy teriyaki glaze, creating a harmonious blend of savory and sweet flavors that will leave you longing for more. &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 
               </p>
               <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
+                
                   <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#Hawaiian">
                     Danie Dnia
                   </button>
