--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
   <div class="row row-cols-3 row-cols-sm-2 row-cols-md-3 g-3">
       <div class="col">
         <div class="card shadow-sm">
-          <img src="Burger/BBQ Burger.jpg" class="bd-placeholder-img card-img-top" width="100%" height="225" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false" alt="Image Description">
+          <img src="{{ url_for('static',filename='BBQ Burger.jpgD') }}" class="bd-placeholder-img card-img-top" width="100%" height="225" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false" alt="Image Description">
           <div class="card-body">
             <p class="card-text">
               The BBQ burger is a mouthwatering delight featuring a juicy beef patty grilled to perfection, topped with smoky barbecue sauce, melted cheese, crispy bacon, and caramelized onions. It's a tantalizing combination of flavors that will satisfy your cravings for a savory and indulgent burger experience. &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp </p>
@@ -59,7 +59,7 @@
   <div class="col">
       <div class="col">
           <div class="card shadow-sm">
-            <img src="Burger/Zestaw Cheese Burger.jpg" class="bd-placeholder-img card-img-top" width="100%" height="225" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false" alt="Image Description">
+            <img src="{{ url_for('static',filename='Zestaw Cheese Burger.jpg') }}" class="bd-placeholder-img card-img-top" width="100%" height="225" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false" alt="Image Description">
             <div class="card-body">
               <p class="card-text">
                   A cheeseburger is a classic American delicacy consisting of a juicy beef patty topped with melted cheese, sandwiched between soft buns, offering a perfect blend of savory flavors and indulgent satisfaction. It is a mouthwatering culinary creation that has become an enduring symbol of comfort food worldwide. &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp </p>
@@ -78,7 +78,7 @@
   <div class="col">
       <div class="col">
           <div class="card shadow-sm">
-            <img src="Burger/Zestaw Beef Burger.jpg" class="bd-placeholder-img card-img-top" width="100%" height="225" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false" alt="Image Description">
+            <img src="{{ url_for('static',filename='Zestaw Beef Burger.jpg') }}" class="bd-placeholder-img card-img-top" width="100%" height="225" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false" alt="Image Description">
             <div class="card-body">
               <p class="card-text">
                   A beef burger is a flavorful culinary masterpiece crafted from a succulent beef patty, perfectly seasoned and cooked to perfection, creating a delectable combination of rich, savory taste and satisfying texture. With each juicy bite, the beef burger delivers a hearty and satisfying experience that has made it a beloved choice for burger enthusiasts everywhere.
@@ -99,7 +99,7 @@
   <div class="col">
       <div class="col">
           <div class="card shadow-sm">
-            <img src="Burger/Zestaw BBQ Burger.jpg" class="bd-placeholder-img card-img-top" width="100%" height="225" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false" alt="Image Description">
+            <img src="{{ url_for('static',filename='Zestaw BBQ Burger.jpg') }}" class="bd-placeholder-img card-img-top" width="100%" height="225" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false" alt="Image Description">
             <div class="card-body">
               <p class="card-text">
                   Indulge in the mouthwatering delight of a BBQ burger, featuring a flame-grilled beef patty generously slathered with tangy barbecue sauce, topped with melted cheese and crispy bacon, all nestled between soft buns. Accompanied by a side of golden fries and a refreshing Coca-Cola, this combination of smoky, savory flavors and classic comfort pairings promises a truly satisfying and quintessentially American dining experience.
@@ -119,7 +119,7 @@
   <div class="col">
       <div class="col">
           <div class="card shadow-sm">
-            <img src="Burger/Hawaiian Burger.jpg" class="bd-placeholder-img card-img-top" width="100%" height="225" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false" alt="Image Description">
+            <img src="{{ url_for('static',filename='Hawaiian Burger.jpg') }}" class="bd-placeholder-img card-img-top" width="100%" height="225" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false" alt="Image Description">
             <div class="card-body">
               <p class="card-text"> 
                   Transport your taste buds to a tropical paradise with a Hawaiian burger. This delicious creation combines a juicy beef or chicken patty with a slice of sweet grilled pineapple, crispy bacon, and a tangy teriyaki glaze, creating a harmonious blend of savory and sweet flavors that will leave you longing for more. &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 
@@ -138,7 +138,7 @@
   <div class="col">
       <div class="col">
           <div class="card shadow-sm">
-            <img src="Burger/Chiken Burger.jpg" class="bd-placeholder-img card-img-top" width="100%" height="225" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false" alt="Image Description">
+            <img src="{{ url_for('static',filename='Chiken Burger.jpg') }}" class="bd-placeholder-img card-img-top" width="100%" height="225" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false" alt="Image Description">
             <div class="card-body">
               <p class="card-text">
                   A chicken burger is a flavorful alternative to its beef counterpart, featuring a tender and juicy chicken patty seasoned to perfection. Served between soft buns with an array of toppings, it offers a lighter yet satisfying option that caters to both poultry lovers and those seeking a delicious twist on the classic burger experience.&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  </p>
@@ -158,7 +158,7 @@
   <div class="col">
        <div class="col">
         <div class="card shadow-sm">
-          <img src="Burger/Cheese Burger.jpg" class="bd-placeholder-img card-img-top" width="100%" height="225" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false" alt="Image Description">
+          <img src="{{ url_for('static',filename='Cheese Burger.jpg') }}" class="bd-placeholder-img card-img-top" width="100%" height="225" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false" alt="Image Description">
           <div class="card-body">
             <p class="card-text">
               A cheeseburger is a timeless classic that combines a succulent beef patty with melty cheese, resulting in a harmonious blend of savory flavors. Nestled between two soft buns and topped with various condiments, it's a mouthwatering delight that satisfies cravings and embodies the epitome of comfort food.</p>
@@ -177,7 +177,7 @@
   <div class="col">
       <div class="col">
           <div class="card shadow-sm">
-            <img src="Burger/Beef Burger.jpg" class="bd-placeholder-img card-img-top" width="100%" height="225" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false" alt="Image Description">
+            <img src="{{ url_for('static',filename='Beef Burger.jpg') }}" class="bd-placeholder-img card-img-top" width="100%" height="225" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false" alt="Image Description">
             <div class="card-body">
               <p class="card-text">
                   A beef burger is a juicy and flavorful delight, made from a perfectly seasoned beef patty cooked to perfection. Sandwiched between soft buns and customizable with an array of toppings, it offers a satisfying and hearty dining experience that celebrates the rich taste of high-quality beef.</p>
@@ -196,7 +196,7 @@
   <div class="col">
       <div class="col">
           <div class="card shadow-sm">
-            <img src="Burger/Beef Bacon Burger.jpg" class="bd-placeholder-img card-img-top" width="100%" height="225" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false" alt="Image Description">
+            <img src="{{ url_for('static',filename='Beef Bacon Burger.jpg') }}" class="bd-placeholder-img card-img-top" width="100%" height="225" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false" alt="Image Description">
             <div class="card-body">
               <p class="card-text">
                   The beef bacon burger is an irresistible fusion of savory flavors, combining a juicy beef patty with crispy bacon made from flavorful beef. With each bite, you'll savor the perfect balance of meaty goodness and smoky undertones, creating a mouthwatering burger experience that is sure to delight any bacon lover.</p>
