--- a/templates/map.html
+++ b/templates/map.html
@@ -14,10 +14,10 @@
     <div class="container">
       <header class="d-flex justify-content-center py-3">
         <ul class="nav nav-pills position-absolute top-1 start-45">
-          <li class="nav-item"><a href="index.html" class="nav-link active" aria-current="page">Home</a></li>
-          <li class="nav-item"><a href="cart.html" class="nav-link">Cart</a></li>
-          <li class="nav-item"><a href="map.html" class="nav-link">Map</a></li> 
-          <li class="nav-item"><a href="login.html" class="nav-link">Login</a></li>
+          <li class="nav-item"><a href="/home" class="nav-link active" aria-current="page">Home</a></li>
+          <li class="nav-item"><a href="/cart" class="nav-link">Cart</a></li>
+          <li class="nav-item"><a href="/map" class="nav-link">Map</a></li> 
+          <li class="nav-item"><a href="/login" class="nav-link">Login</a></li>
         </ul>
         
       </header>
