--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,6 @@
 <!--Wybierajka-->
 <div class="album py-5 bg-body-tertiary">
 <div class="container">
-
   <div class="row row-cols-3 row-cols-sm-2 row-cols-md-3 g-3">
       <div class="col">
         <div class="card shadow-sm">
@@ -50,7 +49,7 @@
               
                 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#BBQ_Burger">
                   Danie Dnia
-                
+                </button>
               <small class="text-body-secondary">9 mins</small>
             </div>
           </div>
