--- a/templates/index.html
+++ b/templates/index.html
@@ -48,9 +48,9 @@
             <div class="d-flex justify-content-between align-items-center">
               
                 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#BBQ_Burger">
-                  Danie Dnia
+                  Order
                 </button>
-              <small class="text-body-secondary">9 mins</small>
+                <div class="d-inline p-2 bg-dark text-white">9 mins</div>
             </div>
           </div>
         </div>
@@ -65,10 +65,10 @@
               <div class="d-flex justify-content-between align-items-center">
                 
                   <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#DanieDnia">
-                    Danie Dnia
+                    Order
                   </button>
                 
-                <small class="text-body-secondary">9 mins</small>
+                  <div class="d-inline p-2 bg-dark text-white">9 mins</div>
               </div>
             </div>
           </div>
@@ -85,10 +85,10 @@
               <div class="d-flex justify-content-between align-items-center">
                 
                   <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#Beef_Zestaw">
-                    Danie Dnia
+                    Order
                   </button>
                 
-                <small class="text-body-secondary">9 mins</small>
+                  <div class="d-inline p-2 bg-dark text-white">9 mins</div>
               </div>
             </div>
           </div>
@@ -106,10 +106,10 @@
               <div class="d-flex justify-content-between align-items-center">
                 
                   <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#BBQ_Zestaw">
-                    Danie Dnia
+                    Order
                   </button>
                 
-                <small class="text-body-secondary">9 mins</small>
+                  <div class="d-inline p-2 bg-dark text-white">9 mins</div>
               </div>
             </div>
           </div>
@@ -126,9 +126,9 @@
               <div class="d-flex justify-content-between align-items-center">
                 
                   <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#Hawaiian">
-                    Danie Dnia
+                    Order
                   </button>
-                <small class="text-body-secondary">9 mins</small>
+                  <div class="d-inline p-2 bg-dark text-white">9 mins</div>
               </div>
             </div>
           </div>
@@ -144,10 +144,10 @@
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#Chiken">
-                    Danie Dnia
+                    Order
                   </button>
                 </div>
-                <small class="text-body-secondary">9 mins</small>
+                <div class="d-inline p-2 bg-dark text-white">9 mins</div>
               </div>
             </div>
           </div>
@@ -164,10 +164,10 @@
             <div class="d-flex justify-content-between align-items-center">
               <div class="btn-group">
                 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#DanieDnia">
-                  Danie Dnia
+                  Order
                 </button>
               </div>
-              <small class="text-body-secondary">9 mins</small>
+              <div class="d-inline p-2 bg-dark text-white">9 mins</div>
             </div>
           </div>
         </div>
@@ -183,10 +183,10 @@
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#Beef">
-                    Danie Dnia
+                    Order
                   </button>
                 </div>
-                <small class="text-body-secondary">9 mins</small>
+                <div class="d-inline p-2 bg-dark text-white">9 mins</div>
               </div>
             </div>
           </div>
@@ -202,10 +202,10 @@
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#Beef_Bacon_Burger">
-                    Danie Dnia
+                    Order
                   </button>
                 </div>
-                <small class="text-body-secondary">9 mins</small>
+                <div class="d-inline p-2 bg-dark text-white">9 mins</div>
               </div>
             </div>
           </div>
