--- a/templates/index.html
+++ b/templates/index.html
@@ -13,18 +13,17 @@
   <body>
 <!--Header menu-->
     <div class="container">
-        <header class="d-flex justify-content-center py-3">
-          <ul class="nav nav-pills position-absolute top-1 start-45">
+        <header class="d-flex justify-content-center p-md-3 m-md-3 py-3">
+          <ul class="nav nav-pills">
             <li class="nav-item"><a href="/" class="nav-link active" aria-current="page">Home</a></li>
             <li class="nav-item"><a href="/cart" class="nav-link">Cart</a></li>
             <li class="nav-item"><a href="/map" class="nav-link">Map</a></li> 
             <li class="nav-item"><a href="/login" class="nav-link">Login</a></li>
-          </ul>
-          
+          </ul> 
         </header>
       </div>
 <!--Baner-->
-<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-body-tertiary">
+<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center ">
   <div class="col-md-5  p-lg-3 mx-auto my-3">
     <h1 class="display-3 fw-bold">Nazwa Restauracji</h1>
     <h3 class="fw-normal text-muted mb-3">Motto restauracji</h3>
@@ -34,6 +33,14 @@
   </div>
   <div class="product-device shadow-sm d-none d-md-block"></div>
   <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
+</div>
+<!--Kategorie-->
+<div class="d-flex justify-content-center bg-body-tertiary">
+  <ul class="nav nav-pills">
+    <li class="nav-item"><a href="/" class="nav-link active" aria-current="page">Burger</a></li>
+    <li class="nav-item"><a href="/cart" class="nav-link">Pizza</a></li>
+    <li class="nav-item"><a href="/map" class="nav-link">Dodatki</a></li> 
+  </ul>
 </div>
 <!--Wybierajka-->
 <div class="album py-5 bg-body-tertiary">
