--- a/templates/index.html
+++ b/templates/index.html
@@ -12,16 +12,14 @@
   </head>
   <body>
 <!--Header menu-->
-    <div class="container">
-        <header class="d-flex justify-content-center p-md-3 m-md-3 py-3">
-          <ul class="nav nav-pills">
-            <li class="nav-item"><a href="/" class="nav-link active" aria-current="page">Home</a></li>
+<div class="d-flex justify-content-end">
+  <ul class="nav nav-pills">
             <li class="nav-item"><a href="/cart" class="nav-link">Cart</a></li>
             <li class="nav-item"><a href="/map" class="nav-link">Map</a></li> 
             <li class="nav-item"><a href="/login" class="nav-link">Login</a></li>
-          </ul> 
-        </header>
-      </div>
+  </ul> 
+        
+</div>
 <!--Baner-->
 <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center ">
   <div class="col-md-5  p-lg-3 mx-auto my-3">
