--- a/templates/index.html
+++ b/templates/index.html
@@ -14,9 +14,9 @@
 <!--Header menu-->
 <div class="d-flex justify-content-end">
   <ul class="nav nav-pills">
-            <li class="nav-item"><a href="/cart" class="nav-link">Cart</a></li>
-            <li class="nav-item"><a href="/map" class="nav-link">Map</a></li> 
-            <li class="nav-item"><a href="/login" class="nav-link">Login</a></li>
+            <li class="nav-item"><a href="/map" class="nav-link"><img src="{{ url_for('static',filename='Map.jpg') }}" width="30" height="30" alt=""></a></li> 
+            <li class="nav-item"><a href="/login" class="nav-link"><img src="{{ url_for('static',filename='Login.jpg') }}" width="30" height="30" alt=""></a></li>
+            <li class="nav-item"><a href="/cart" class="nav-link"><img src="{{ url_for('static',filename='CartICON.jpg') }}" width="30" height="30" alt=""></a></li>
   </ul> 
         
 </div>
