--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
     
-    <title>POP2023</title>
+    <title>Login</title>
   </head>
 <!-- Section: Design Block -->
 <section class="">
@@ -32,7 +32,7 @@
                 <div class="row">
                   <div class="col-md-6 mb-4">
                     <div class="form-outline">
-                      <input type="text" id="form3Example1" class="form-control" />
+                      <input type="text" id="username" class="form-control" />
                       <label class="form-label" for="form3Example1">First name</label>
                     </div>
                   </div>
@@ -60,7 +60,7 @@
                 <button type="submit" class="btn btn-primary btn-block d-flex p-2">
                   Sign up
                 </button>
-                  </button>
+                  <p>If you don't have account register <a href="/register">there</a></p>
                 </div>
               </form>
             </div>
