--- a/templates/login.html
+++ b/templates/login.html
@@ -28,31 +28,16 @@
           <div class="card">
             <div class="card-body py-5 px-md-5">
               <form>
-                <!-- 2 column grid layout with text inputs for the first and last names -->
-                <div class="row">
-                  <div class="col-md-6 mb-4">
-                    <div class="form-outline">
-                      <input type="text" id="username" class="form-control" />
-                      <label class="form-label" for="form3Example1">First name</label>
-                    </div>
-                  </div>
-                  <div class="col-md-6 mb-4">
-                    <div class="form-outline">
-                      <input type="text" id="form3Example2" class="form-control" />
-                      <label class="form-label" for="form3Example2">Last name</label>
-                    </div>
-                  </div>
-                </div>
 
                 <!-- Email input -->
                 <div class="form-outline mb-4">
-                  <input type="email" id="form3Example3" class="form-control" />
+                  <input type="email" id="form3Example3" name="email" required="" class="form-control" />
                   <label class="form-label" for="form3Example3">Email address</label>
                 </div>
 
                 <!-- Password input -->
                 <div class="form-outline mb-4">
-                  <input type="password" id="form3Example4" class="form-control" />
+                  <input type="password" id="form3Example4" name="password" required="" class="form-control" />
                   <label class="form-label" for="form3Example4">Password</label>
                 </div>
 
@@ -60,7 +45,7 @@
                 <button type="submit" class="btn btn-primary btn-block d-flex p-2">
                   Sign up
                 </button>
-                  <p>If you don't have account register <a href="/register">there</a></p>
+                  <p>If you don't have account register <a href="/register">Create</a></p>
                 </div>
               </form>
             </div>
